web: fix strategy component fields visibility

--- a/web/src/app/strategy/strategy.component.less
+++ b/web/src/app/strategy/strategy.component.less
@@ -4,7 +4,7 @@ button {
 
 .fields {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
 }
